test/fail/Issue1078/B.agda
module Issue1078.A where -- The typo in the module name is intended!

open import Common.Level using (Level)
open import Issue1078A

test = Level
